typo in index.html

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 </li>
                 <li>
                     <strong>Storyboards are about the emotional journey.</strong>
-                    Of course, your storyboard should also clearly show the interface, but representing your users internal world is just as, if not more, crucial to understanding how people interact
+                    Of course, your storyboard should also clearly show the interface, but representing your user's internal world is just as, if not more, crucial to understanding how people interact
                     with an interface. 
                 </li>
             </ol>
